新增重大職災查詢以及重大職災統計的API、文件
