# app/Models/AccidentType.php
@@ -1,0 +1,13 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class AccidentType extends Model
+{
+    use HasFactory;
+
+    public $timestamps = false;
+}
